@@ -1,6 +1,5 @@
 package com.aioi.drawaing.gateway.config;
 
-import java.util.Arrays;
 import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,30 +8,21 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 @Configuration
-public class CorsGlobalConfiguration {
-
+public class CorsConfig {
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration config = new CorsConfiguration();
-
-        // 자격 증명 허용
         config.setAllowCredentials(true);
-
-        // 허용할 Origin
-        config.setAllowedOrigins(List.of("*"));
-
-        // 모든 헤더 허용
-        config.addAllowedHeader("*");
-
-        // 허용할 HTTP 메서드
-        config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        config.setAllowedOrigins(List.of(
+                "http://localhost:5500",
+                "http://localhost:5173",
+                "https://www.drawaing.site"
         ));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
-        // 매핑할 URL 경로
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-
+        source.registerCorsConfiguration("/auth/**", config);
         return new CorsWebFilter(source);
     }
 }
